# Truthify-FactCheckingLLM

./: .gitignore  pyproject.toml
backend/: main.py
backend/src/: check_claims.py  extract_claims.py  get_text.py
backend/test/: test_api.py  test_check_claims.py  test_extract_claims.py  test_get_text.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js  main.jsx
frontend/src/assets/: amiri.js
frontend/src/components/: FactItem.jsx  FileTab.jsx  Header.jsx  ResultsSection.jsx  TabContent.jsx  TabPanel.jsx  TextTab.jsx  VideoPlayer.jsx  YouTubeTab.jsx
frontend/src/context/: AppContext.js
frontend/src/exports/: pdfExport.js
frontend/src/services/: apiService.js  processingService.js
frontend/src/styles/: theme.js
frontend/src/utils/: validator.js
