[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-search-results>=2.4.2",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
    "unicorn>=2.1.3",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.2.1",
]
